experimental/ast/testdata/parser/range/options.proto.stderr
error: options are not permitted on reserved ranges
  --> testdata/parser/range/options.proto:21:16
   | 
21 |     reserved 1 [(allowed) = false];
   |                ^^^^^^^^^^^^^^^^^^^ help: remove this

encountered 1 error
